Bug 425533 - Price information to old currencies not added when adding successor
Summary: Price information to old currencies not added when adding successor
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-19 08:40 UTC by Thomas Baumgart
Modified: 2020-08-19 08:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2020-08-19 08:40:02 UTC
SUMMARY
Exchange rate information between ancient and new currency is not added automatically in certain circumstances.

STEPS TO REPRODUCE
1. Have an ancient currency on file (e.g. ZMK)
2. Add the successor to the file (e.g. ZMW)

OBSERVED RESULT
Exchange rate between ZMK and ZMW is not added to the file.

EXPECTED RESULT
Exchange rate between ZMK and ZMW is added to the file.

ADDITIONAL INFORMATION
When new currency is added first and then the ancient currency is added, the exchange rate information is available.
Comment 1 Thomas Baumgart 2020-08-19 08:43:24 UTC
Git commit a7f6275c489f937259be8187f99e143d1744b4fd by Thomas Baumgart.
Committed on 19/08/2020 at 08:41.
Pushed by tbaumgart into branch 'master'.

Add known exchange rate when adding a replacement currency

M  +27   -2    kmymoney/dialogs/kcurrencyeditdlg.cpp

https://invent.kde.org/office/kmymoney/commit/a7f6275c489f937259be8187f99e143d1744b4fd
Comment 2 Thomas Baumgart 2020-08-19 08:50:24 UTC
Git commit 4763930b6670c216fa9ef3514e5588a497ec5bae by Thomas Baumgart.
Committed on 19/08/2020 at 08:50.
Pushed by tbaumgart into branch '5.1'.

Add known exchange rate when adding a replacement currency
FIXED-IN: 5.1.1

(cherry picked from commit a7f6275c489f937259be8187f99e143d1744b4fd)

M  +27   -2    kmymoney/dialogs/kcurrencyeditdlg.cpp

https://invent.kde.org/office/kmymoney/commit/4763930b6670c216fa9ef3514e5588a497ec5bae