Add known exchange rate when adding a replacement currency

BUG: 425533
FIXED-IN: 5.1.1

(cherry picked from commit a7f6275c489f937259be8187f99e143d1744b4fd)